--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,10 @@ build/Release
 node_modules/
 jspm_packages/
 
+# Node files
+package-lock.json
+package.json
+
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
 
